<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="apikey_hint" translatable="false">XXXXXXX-XXXXXXX-XXXXXXX-XXXXXXX</string>
    <string name="unknown_error">Unknown error</string>
    <string name="id">ID • %d</string>
    <string name="updated">Updated • %s</string>
    <string name="time">%s • %s min</string>
    <string name="rating" translatable="false">%s • %s</string>
    <string name="_3d">3D</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change_accent_color">Change accent color</string>
    <string name="select_color">Select color</string>
    <string name="change_api_key">Change API key</string>
    <string name="enter_api_key">Enter API key</string>
    <string name="saved">Saved</string>
    <string name="films">Films</string>
    <string name="settings">Settings</string>
    <string name="app_will_be_restarted">Application will be restarted</string>
    <string name="apikey_format">Only digits and latin uppercase letters.</string>
    <string name="invalid_format">Invalid format.</string>
    <string name="options">Options</string>
    <string name="force_update">Force update</string>
    <string name="open_webpage">Open webpage</string>
    <string name="show_poster">Show poster</string>
    <string name="share">Share</string>
    <string name="search_name">Search name...</string>
    <string name="search_query">Search: %s</string>

    <plurals name="votes">
        <item quantity="one">%,d vote</item>
        <item quantity="other">%,d votes</item>
    </plurals>

</resources>
