<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apiKeyTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_medium"
            android:layout_gravity="center"
            app:hintEnabled="false"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/apiKeyEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="textCapCharacters|textMultiLine"
                android:imeOptions="actionDone"
                android:hint="@string/apikey_hint"
                />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/formatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_medium"
            android:gravity="center"
            android:text="@string/apikey_format"
            />

    <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_medium"
            android:gravity="center"
            android:text="@string/invalid_format"
            android:textColor="?attr/colorError"
            android:visibility="gone"
            />

</LinearLayout>
