<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        tools:context=".fragments.FilmDetailsFragment"
        >

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/indent_medium"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                    android:id="@+id/idLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/rectangle_rounded"
                    >

                <TextView
                        android:id="@+id/idTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/indent_medium"
                        tools:text="ID • 253765"
                        />

                <TextView
                        android:id="@+id/updatedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Обновлено • 2025-04-28 14:17"
                        />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/indent_small"
                    android:background="@drawable/rectangle_rounded"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    <TextView
                            android:id="@+id/nameTextView"
                            android:layout_width="@dimen/zero_size"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            tools:text="Ночь дня рассвета сына невесты возвращения мести ужаса атаки злобных мутировавших чужих плотоядных восставших из ада зомбированных живых мертвецов. Часть 2: в шокирующем 2-D формате (1991)"
                            />

                    <TextView
                            android:id="@+id/has3dTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/indent_small"
                            android:textStyle="bold"
                            android:textColor="?attr/colorPrimary"
                            android:text="@string/_3d"
                            />

                </LinearLayout>

                <TextView
                        android:id="@+id/foreignNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/indent_small"
                        tools:text="Night of the Day of the Dawn of the Son of the Bride of the Return of the Revenge of the Terror of the Attack of the Evil, Mutant, Alien, Flesh Eating, Hellbound, Zombified Living Dead Part 2: In Shocking 2-D"
                        />

                <View
                        android:id="@+id/genresCountriesLine"
                        style="@style/App.DividerHorizontal"
                        />

                <TextView
                        android:id="@+id/countriesTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="criminal • drama • biopic"
                        />

                <TextView
                        android:id="@+id/genresTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="France • USA • Great Britain"
                        />

                <View style="@style/App.DividerHorizontal" />

                <LinearLayout
                        android:id="@+id/timeLinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                    <TextView
                            android:id="@+id/timeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="@dimen/indent_medium"
                            tools:text="1999-2007 • 999 min"
                            />

                    <TextView
                            android:id="@+id/ratingTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="8.9 • 1 780 560 votes"
                            />

                </LinearLayout>

                <View
                        android:id="@+id/descriptionLine"
                        style="@style/App.DividerHorizontal"
                        />

                <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="XML Description"
                        />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="32dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/indent_normal"
            android:layout_marginBottom="164dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_share"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/share"
            android:tooltipText="@string/share"
            tools:targetApi="26"
            android:visibility="gone"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="32dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/indent_normal"
            android:layout_marginBottom="84dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_browser"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/open_webpage"
            android:tooltipText="@string/open_webpage"
            tools:targetApi="26"
            android:visibility="gone"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="32dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/indent_normal"
            android:layout_marginBottom="124dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_image"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/show_poster"
            android:tooltipText="@string/show_poster"
            tools:targetApi="26"
            android:visibility="gone"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="32dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/indent_normal"
            android:layout_marginBottom="44dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:src="@drawable/ic_refresh"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/force_update"
            android:tooltipText="@string/force_update"
            tools:targetApi="26"
            android:visibility="gone"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/indent_normal"
            android:backgroundTint="?attr/colorPrimary"
            android:src="@drawable/ic_menu"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
            android:contentDescription="@string/options"
            android:tooltipText="@string/options"
            tools:targetApi="26"
            />
    />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
